--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+#title {
+    display: flex;
+    justify-content: center;
+}
+
+.buttoncontainer {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+}
+
 button {
     margin: 15px;
 }
@@ -33,4 +44,15 @@ button {
     margin-top: 10px;
     font-weight: bold;
 
+}
+
+#winnerannouncement {
+    background-color: bisque;
+    margin-top: 30px;
+    height: 300px;
+    font-weight: bold;
+    font-size: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
